Fixed #6768 - Horizontal scrollable table header borders missing on IE

--- a/src/app/components/table/table.css
+++ b/src/app/components/table/table.css
@@ -70,7 +70,7 @@
     position: relative;
 }
 
-.ui-table-scrollable-body > table > .ui-table-tbody > tr:first-child > td {
+.ui-table-scrollable-vertical > .ui-table-tbody > tr:first-child > td {
     border-top: 0 none;
 }
 
